app/assets/stylesheets/m3.scss
@import 'common';

.mosaic-root {
  bottom: 0 !important;
  left: 0 !important;
  right: 0 !important;
  top: 0 !important;
}

.mosaic-tile {
  margin: 0 !important;
}

.mosaic-split.-row, .mosaic-split.-column {
  background-color: #aaa;
}

.#{$namespace}-container {
  border: 0;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 2px 1px -1px rgba(0, 0, 0, 0.2);
  height: calc(100vh - 3px); // Give a little space for the box shadow
  margin: 0 1px 3px 0;
  position: relative;
}

